# docs/openapi.gen.go
@@ -672,6 +672,31 @@ type ListFollowUser struct {
 	} `json:"data"`
 }
 
+// ListRecipe defines model for ListRecipe.
+type ListRecipe struct {
+	Data []struct {
+		ChefId    openapi_types.UUID `json:"chefId"`
+		CreatedAt string             `json:"createdAt"`
+		Id        openapi_types.UUID `json:"id"`
+
+		// ImageUrl 画像
+		ImageUrl *string `json:"imageUrl,omitempty"`
+
+		// Introduction レシピの紹介文
+		Introduction *string `json:"introduction,omitempty"`
+
+		// Name レシピ名
+		Name string `json:"name"`
+
+		// NumFav ファボられ数
+		NumFav int `json:"numFav"`
+
+		// Servings ＊人前
+		Servings  int    `json:"servings"`
+		UpdatedAt string `json:"updatedAt"`
+	} `json:"data"`
+}
+
 // SearchChef defines model for SearchChef.
 type SearchChef struct {
 	Data *[]struct {
